<resources>
    <string name="app_name">pm_carlosmilena_jdbc_mysql</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="saludo">¡Hola, %s!</string>
    <string name="insertar_juego">Insertar juego</string>
    <string name="volver_atr_s">Volver atrás</string>
    <string name="introduzca_identificador">Introduzca identificador</string>
    <string name="introduzca_nombre">Introduzca nombre</string>
    <string name="introduzca_precio">Introduzca precio</string>
    <string name="foto_del_juego">foto del juego</string>
    <string name="identificador">Identificador</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="g_nero">Género</string>
    <string name="plataforma">Plataforma</string>
    <string name="crear_nuevo_juego">Crear nuevo juego</string>
    <string name="acceder">Acceder</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="desconectar">Desconectar</string>
    <string name="introduce_cuenta_email">Introduce cuenta Email</string>
    <string name="introduce_contrase_a">Introduce contraseña</string>
    <string name="todo">TODO</string>
    <string name="no_tienes_cuenta_reg_strate_ahora">¿No tienes cuenta? Regístrate ahora</string>
    <string name="acceso_a_wellplayed">Acceso a WellPlayed</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="volver">Volver</string>
    <string name="tu_nombre_usuario_email">Tu nombre usuario (email)</string>
    <string name="tu_contrase_a">Tu contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="creaci_n_de_cuenta_nueva">Creación de cuenta nueva</string>
    <string name="cerrar_aplicaci_n">Cerrar aplicación</string>
    <string name="insertar_nuevo_juego">Insertar nuevo juego</string>
    <string name="mostrar_cat_logo">Mostrar catálogo</string>
    <string name="hola_usuario">¡Hola! usuario</string>
    <string name="qu_deseas_hacer">¿Qué deseas hacer?</string>
    <string name="eliminar_juego">Eliminar juego</string>
    <string name="cancelar_cambios">Cancelar cambios</string>
    <string name="aplicar_cambios">Aplicar cambios</string>
    <string name="modificar_juego">Modificar juego</string>
    <string name="cat_logo_de_juegos">Catálogo de juegos</string>
    <string name="nombre_del_juego_buscado">Nombre del juego buscado</string>
    <string name="buscar">Buscar</string>
</resources>