<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.vistas.AutenticacionActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/morado_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/morado_50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloAcceso"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/acceso_a_wellplayed"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/ivLogotipoAcceso"
                android:layout_width="240dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/wellplayedlogo" />

            <EditText
                android:id="@+id/etCorreoAcceso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:hint="@string/introduce_cuenta_email"
                android:inputType="text|textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#4A148C" />

            <EditText
                android:id="@+id/etPasswordAcceso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:hint="@string/introduce_contrase_a"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#4A148C" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAcceder"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="acceder"
                    android:text="@string/acceder"
                    android:textColor="#EA80FC" />

                <Button
                    android:id="@+id/btnDesconectar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="cerrarSesion"
                    android:text="@string/desconectar"
                    android:textColor="#EA80FC"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="32dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#263238" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:text="@string/no_tienes_cuenta_reg_strate_ahora"
                    android:textColor="#263238" />

                <View
                    android:id="@+id/view"
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="#263238" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCrearNuevaCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:backgroundTint="@color/morado_100"
                android:onClick="irACrearNuevaCuenta"
                android:text="@string/crear_nueva_cuenta"
                android:textColor="#EA80FC" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>