<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.vistas.MenuGeneralActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/morado_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/morado_50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSaludoAlUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hola_usuario"
                android:textAlignment="textEnd"
                android:textColorHint="#5E35B1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTituloMenuGeneral"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/qu_deseas_hacer"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnInsertarJuego"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="irAInsertarJuegoConFoto"
                    android:text="@string/insertar_nuevo_juego"
                    android:textColor="#EA80FC" />

                <Button
                    android:id="@+id/btnVerCatalogoJuego"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="irAMostrarDatos"
                    android:text="@string/mostrar_cat_logo"
                    android:textColor="#EA80FC" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCerrarAplicacion"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="cerrarAplicacion"
                    android:text="@string/cerrar_aplicaci_n"
                    android:textColor="#EA80FC" />

                <Button
                    android:id="@+id/btnVolverMenuInicial"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="salirDeMenuGeneral"
                    android:text="@string/volver_atr_s"
                    android:textColor="#EA80FC" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
