<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.vistas.AgregarNuevoJuegoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/morado_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/morado_50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTituloCrearJuego"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/crear_nuevo_juego"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/ivNuevoImagen"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:contentDescription="@string/foto_del_juego"
                android:onClick="cambiarImagenCreacion"
                app:srcCompat="@drawable/insertarimagen" />






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/morado_25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:background="@color/morado_25"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:singleLine="true"
                    android:text="@string/identificador"
                    android:textColor="#000000"
                    android:textColorHint="#3E2723"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtIdJuego"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@color/morado_25"
                    android:hint="@string/introduzca_identificador"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:singleLine="true"
                    android:textColorHint="#455A64"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/morado_25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPlataformaNuevo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/plataforma"
                    android:textColor="#263238"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/spNuevoPlataforma"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:minHeight="48dp" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/morado_25"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:autofillHints=""
                android:background="@color/morado_25"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:text="@string/nombre"
                android:textColor="#000000"
                android:textColorHint="#3E2723"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtNuevoNombreJuego"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@color/morado_25"
                android:hint="@string/introduzca_nombre"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:textColorHint="#455A64"
                android:textStyle="italic" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/morado_25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGeneroNuevo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/g_nero"
                    android:textColor="#263238"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/spNuevoGenero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:minHeight="48dp" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/morado_25"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:autofillHints=""
                android:background="@color/morado_25"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:text="@string/precio"
                android:textColor="#000000"
                android:textColorHint="#3E2723"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtNuevoPrecioJuego"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@color/morado_25"
                android:hint="@string/introduzca_precio"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="true"
                android:textColorHint="#455A64"
                android:textStyle="italic" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnInsertarNuevo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="insertarJuegoConImagen"
                    android:text="@string/insertar_juego"
                    android:textColor="#EA80FC" />

                <Button
                    android:id="@+id/btnVolverAtras"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/morado_100"
                    android:onClick="volverAtras"
                    android:text="@string/volver_atr_s"
                    android:textColor="#EA80FC" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>